welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: java.awt.Color does not take type parameters
	var T = new Color [Int](getMondeHauteur())
                    ^