welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Color [Int](getMondeHauteur())
	for (i <- 0 to T.length-1) {
  getCouleurSol()
}
}
